--- a/README
+++ b/README
@@ -1,27 +1,1 @@
-<<<<<<< HEAD
-Hmmmmmmmm............
-=======
-<<<<<<< HEAD
-Don't read me again
-dsfkdklfjksdhf
-abra ca da bra
-dsfkdklfjksdhf
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
-fads:wq
-=======
-abra ca da bra
->>>>>>> d469300d7ce2e85a62fde938a4a247f2e3805d3d
-=======
-dsfkdklfjksdhf
->>>>>>> 0ee52f46d8ca1d423c4cd7758281926cf3dccb74
-
-
-IDIOTS.. GET BACK TO WORK.. !!
-
-
-hello wordl!:qw
->>>>>>> c07d08d1a31b9e55e00df12a20b1588809db2d53
-ooooo so fun
->>>>>>> 91b1ea382d13688424d4d264eae6d90d1daab580
+ Hi All
